--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
 	<div id="container">
 <!-- the home page  -->
-
+       <h2>Akinator the C17 version</h2>
 		<header>
+
 			<nav>
 				<ul>
 					<li onclick="home()" style="cursor: pointer;">Home</li>
@@ -115,7 +116,7 @@
 	</div>
 
 </div>
-<img id="thinking" src="1_lTWsQr8phKRUVGMjL7SqGg.jpeg">
+<img id="thinking" src="1_lTWsQr8phKRUVGMjL7SqGg.png">
 </div>
 </div>
 
